--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,5 +108,6 @@
     "utility": "cpp",
     "initializer_list": "cpp"
   },
-  "C_Cpp.default.compilerPath": "D:\\MinGW\\bin\\g++.exe"
+  "C_Cpp.default.compilerPath": "D:\\MinGW\\bin\\g++.exe",
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
